Create unit test

--- a/FastestFibonacci/FastestFibonacci.Tests/FastestFibonacci.Tests.csproj
+++ b/FastestFibonacci/FastestFibonacci.Tests/FastestFibonacci.Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FastestFibonacci.CoreLib\FastestFibonacci.CoreLib.csproj" />
+  </ItemGroup>
+
 </Project>
