--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: ./FastestFibonacci/dotnet restore
+      run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: ./FastestFibonacci/dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal
